# artale-agent

./: .gitignore  LICENSE  Pipfile  README.md  VERSION  build.ps1  capture_engine.py  config.json  controller.py  data_types.py  exp_tracker.py  main.py  ocr_engine.py  overlay.py  pyproject.toml  requirements.txt  rjpq_tool.py  settings_window.py  skill_timer.py  utils.py
.github/workflows/: auto-tag.yml  build.yml  release.yml
scratch/: debug_wc.py  fix_overlay.py
scripts/: build.ps1
src/artale_agent/: __main__.py  awesome_tab.py  capture_engine.py  cli.py  controller.py  data_types.py  dev_entry.py  exp_tracker.py  main.py  ocr_engine.py  overlay.py  report_manager.py  rjpq_tool.py  settings_window.py  skill_timer.py  utils.py
src/artale_agent/platform/: __init__.py  base.py  darwin.py  windows.py
